name:               app
version:            0.1.0.0
synopsis:           First miso app
category:           Web
build-type:         Simple
cabal-version:      >=1.22
extra-source-files: assets/se/*

executable app
  main-is:          Main.hs
  cpp-options:      -DGHCJS_BROWSER
  hs-source-dirs:   src

  -- cabal-fmt: expand src -Main
  other-modules:
    Const
    DevServer
    Pixi
    ThreeVRM
    Types
    View

  build-depends:
      apecs
    , base
    , bytestring
    , jsaddle
    , jsaddle-dom
    , lens
    , linear
    , miso

  if !impl(ghcjs)
    build-depends:
        jsaddle-warp
      , transformers
      , wai
      , wai-app-static
      , warp
      , websockets

  default-language: Haskell2010
